[gd_scene load_steps=2 format=3 uid="uid://bfrwejf6hd228"]

[ext_resource type="Script" uid="uid://jcjoitsdqrsj" path="res://Code/autoloads/CraftingMenu.gd" id="1_tydni"]

[node name="CraftingMenu" type="Control"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tydni")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="Queue" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Timer" type="Timer" parent="Panel"]

[node name="InfoLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
